--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
-<br />
 <h2>Photos</h2>
-<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "percentPosition": true, "columnWidth": 250, "gutter": 20 }' style="margin-left: 8%;">
+<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "percentPosition": true, "columnWidth": 250, "gutter": 20 }'>
   <div class="grid-item color1">
     <center>
       <style>.color1{background-color:#3949AB;}</style>
