--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Algorotoscope
 	<p>These are the works I've created so far using my photos and Tensorflow style transfer.</p>
 	<center><hr style="width: 75%;" /></center>
   {% for work in site.works %}
-      <h3>{{ work.title }}</h3>
+      <p align="center" style="font-size: 18px;"><strong>{{ work.title }}</strong></p>
       {{ work.content }}
     	<center><hr style="width: 75%;" /></center>
   {% endfor %}
