--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Algorotoscope
 	<div class="content">
 
 	<h3>Algorotoscope Works</h3>
-	<p>These are the works I've created so far using my photos and Tensorflow style transfer.</p>
+	<p>These are the works I've created so far as part of my Algorotoscope work. Early on I was applying to videos, but recently I have just been applying to my photos.</p>
 	<center><hr style="width: 75%;" /></center>
   {% for work in site.works %}
       <p align="center" style="font-size: 18px;"><strong>{{ work.title }}</strong></p>
       {{ work.content }}
     	<center><hr style="width: 75%;" /></center>
   {% endfor %}
-
+	
   </div>
 </section>
