--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@ layout: default
 title: Algorotoscope
 ---
 <section>
-	<div class="content">
-
 	<h3>Algorotoscope Works</h3>
 	<p>These are the works I've created so far as part of my Algorotoscope work. Early on I was applying to videos, but recently I have just been applying to my photos.</p>
-	<center><hr style="width: 75%;" /></center>
+	<div class="row">
   {% for work in site.works %}
+		<div class="4u 12u$(medium)">
       <p align="center" style="font-size: 18px;"><strong>{{ work.title }}</strong></p>
-      {{ work.content }}
-    	<center><hr style="width: 75%;" /></center>
+      <p align="center"><img src="{{ work.image }}" width="100%"></p>
+    </div>
   {% endfor %}
-	
-  </div>
+	</div>
 </section>
