--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Algorotoscope
 		<div class="4u 12u$(medium)">
 			<a href="{{ work.url }}">
 				<strong>{{ work.title }}</strong>
-      	<img src="{{ work.image }}" width="100%">
+      	<img src="{{ work.square }}" width="100%">
 			</a>
     </div>
   {% endfor %}
