--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Algorotoscope
 	<h3>Algorotoscope Works</h3>
 	<p>These are the works I've created as part of my Algorotoscope work. Early on I was applying to videos, but recently I have just been applying to my photos, with a variety of textures being transferred and applied.</p>
 	<div class="row">
-  {% for work in site.works %}
+  {% for work in site.works | sort: 'date' %}
 		<div class="4u 12u$(medium)">
 			<a href="{{ work.url }}">
 				<strong>{{ work.title }}</strong>
