--- a/updates/index.html
+++ b/updates/index.html
@@ -3,9 +3,8 @@ layout: default
 ---
 <section>
 	<div class="content">
-
 	<h3>Algorotoscope Updates</h3>
-	<p>.</p>
+	<p>These are the stories I have told along the way, as I'm producing images and videos.</p>
 	<center><hr style="width: 75%;" /></center>
   {% for post in paginator.posts %}
       <h3><a href="{{ site.production_url }}{{ post.url }}">{{ post.title }}</a></h3>
