--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: Algorotoscope
 ---
 <section>
 	<h3>Algorotoscope Works</h3>
-	<p>After the 2016 election I suck into depression and began playing with Tensorflow to take my mind off the state of our world, immersing myself in understanding how I can apply texture transfer to videos and images. I began playing with a lot of my drone footage, transforming them into cartoon like landscape, but then quickly began playing with images, and apply potentially meaningful transfers that would augment and evolve the photos I have taken. I use these images in my stories across API Evangelist, Kin Lane, and other blogs I write on.</p>
+	<p>After the 2016 election I was sucked into depression, and to help occupy my mind i began playing with <a href="https://www.tensorflow.org/">the machine learning platform Tensorflow</a> to take my mind off the state of our world, immersing myself in understanding how I can apply texture transfer to videos and images. I began playing with a lot of my drone footage, transforming them into cartoon like landscape, but then quickly began playing with just still images, and apply potentially meaningful transfers that would augment and evolve the photos I have taken. I use these images in my stories across API Evangelist, Kin Lane, and other blogs I write on.</p>
 	<div class="row">
   {% for work in site.works | sort: 'date' | sort: 'date' %}
 		<div class="4u 12u$(medium)"><a href="{{ work.url }}"> <img src="{{ work.square }}" width="100%"></a></div>
   {% endfor %}
 	</div>
-	<p>I'm adding images regularly, and using as part of my storytelling on API Evangelist and Kin Lane, in hopes of demonstrating how algorithms are distorting the world around us each day in the online world we live in. My goal is to help make us aware in real time that algorithms are impacting our digital and even our physical worlds. My images do not always look pretty, but I try to make sure they have meaning and push forward the conversaton in some way.</p>
+	<p>I'm adding images regularly, and using as part of my storytelling in hopes of demonstrating how algorithms are distorting the world around us each day in the online world we live in. My goal is to help make us aware in real time that algorithms are impacting our digital and even our physical worlds. My images do not always look pretty, but I try to make sure they have meaning and push forward the conversaton in some way.</p>
 </section>
