--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Algorotoscope
 	<h3>Algorotoscope Works</h3>
 	<p>After the 2016 election I was sucked into depression, and to help occupy my mind i began playing with <a href="https://www.tensorflow.org/">the machine learning platform Tensorflow</a> to take my mind off the state of our world, immersing myself in understanding how I can apply texture transfer to videos and images. I began playing with a lot of my drone footage, transforming them into cartoon like landscape, but then quickly began playing with just still images, and apply potentially meaningful transfers that would augment and evolve the photos I have taken. I use these images in my stories across API Evangelist, Kin Lane, and other blogs I write on.</p>
 	<div class="row">
-	{% assign images = site.works | sort: 'date' %}
+	{% assign images = site.works | sort: 'date' | descending %}
   {% for work in images %}
 		<div class="4u 12u$(medium)"><a href="{{ work.url }}"> <img src="{{ work.square }}" width="100%"></a></div>
   {% endfor %}
