change some text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Algorotoscope
 ---
 <section>
 	<h3>Algorotoscope Works</h3>
-	<p>After the 2016 election I found myself extremely depressed, and to help occupy my brain I began to play with <a href="https://www.tensorflow.org/">the machine learning platform Tensorflow</a>, immersing myself in understanding how I can apply texture transfer machine learning to videos and images. I began playing with a lot of my drone footage, transforming them into cartoon like landscape, but then quickly began playing with just still images, and apply potentially meaningful transfers that would augment and evolve the photos I have taken. I use these images in my stories across API Evangelist, Kin Lane, and other blogs I publish to.</p>
+	<p>After the 2016 election I found myself extremely depressed, and to help occupy my brain I began to play with <a href="https://www.tensorflow.org/">the machine learning platform Tensorflow</a>, immersing myself in understanding how I can apply texture transfer machine learning to videos and images. I began playing with a lot of my drone footage, transforming them into cartoon like landscape, but then quickly began playing with just still images, and apply potentially meaningful transfers that would augment and evolve the photos I have taken. I use these images in my stories across API Evangelist, Kin Lane, and other blogs I publish to to help show how algorithms are being used to distort how we see the world.</p>
 	<h3>Collections</h3>
-	<p>These are some collections of photos I have pulled together to further demonstrate how I am stealing from the works of others using technology to demonstrate how technology is stealing from us, and distorting almost everything around us on and offline.
+	<p>These are some collections of photos I have pulled together to further demonstrate how I am stealing from the works of others using technology to show how technology is stealing from us, and distorting almost everything around us on and offline. The motives behind this distortion is nothing new, but is finding a new home when it comes to the algorithms that are increasingly governing the world around us.</p>
 	<div class="row">
 		{% for collection in site.collections %}
 			{% assign slug = collection.title | replace: " ", "-" | downcase %}
